// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environments should match Development 1`] = `
Object {
  "debug": true,
  "languages": Array [
    "English",
    "Deutsch",
  ],
  "name": "Development",
  "networks": Array [
    "Local",
    "Playground",
    "TestNet",
    "MainNet",
  ],
}
`;

exports[`environments should match Preview 1`] = `
Object {
  "debug": true,
  "languages": Array [
    "English",
    "Deutsch",
  ],
  "name": "Preview",
  "networks": Array [
    "Playground",
    "TestNet",
    "MainNet",
  ],
}
`;

exports[`environments should match Production 1`] = `
Object {
  "debug": false,
  "languages": Array [
    "English",
    "Deutsch",
  ],
  "name": "Production",
  "networks": Array [
    "MainNet",
    "TestNet",
    "Playground",
  ],
}
`;
